[DM] Do not persist IPv4 serial numbers
If a device has an IP for its serial number, we will not persist it
because it's volatile.

Bug: 198438748
Test: PhysicalTabPersistentStateComponentTest
Change-Id: Ia0f94e79d3d8f21949e85638d5e1b1c23ed79440

GitOrigin-RevId: c1b837ac383521a5757b39960cd80a82179895c6