@@ -18,25 +18,37 @@ package com.android.tools.idea.devicemanager.physicaltab;
 import static org.junit.Assert.assertEquals;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
 
 @RunWith(JUnit4.class)
 public final class PhysicalTabPersistentStateComponentTest {
+  private final PhysicalTabPersistentStateComponent myComponent = new PhysicalTabPersistentStateComponent();
+
   @Test
   public void get() {
     // Arrange
-    Collection<PhysicalDevice> expectedDevices = Collections.singletonList(TestPhysicalDevices.GOOGLE_PIXEL_3);
-
-    PhysicalTabPersistentStateComponent component = new PhysicalTabPersistentStateComponent();
-    component.set(expectedDevices);
+    Collection<PhysicalDevice> expectedDevices = List.of(TestPhysicalDevices.GOOGLE_PIXEL_3);
+    myComponent.set(expectedDevices);
 
     // Act
-    Object actualDevices = component.get();
+    Object actualDevices = myComponent.get();
 
     // Assert
     assertEquals(expectedDevices, actualDevices);
+  }
+
+  @Test
+  public void getFilterKeyIsPersistent() {
+    // Arrange
+    myComponent.set(List.of(TestPhysicalDevices.ONLINE_COMPAL_FALSTER, TestPhysicalDevices.GOOGLE_PIXEL_3));
+
+    // Act
+    Object actualDevices = myComponent.get();
+
+    // Assert
+    assertEquals(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3), actualDevices);
   }
 }
